[package]
name = "clockpro-cache"
description = "CLOCK-Pro cache replacement policy"
version = "0.1.8"
homepage = "https://github.com/jedisct1/rust-clockpro-cache"
keywords = ["cache"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["algorithms", "caching"]
edition = "2018"

[badges]
travis-ci = { repository = "jedisct1/rust-clockpro-cache" }
appveyor = { repository = "jedisct1/rust-clockpro-cache" }

[dependencies]
slab = "0.4"
bitflags = "1.2"
unsafe_unwrap = "0.1"

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
rand_distr = "0.4.0"

[[bench]]
name = "criterion"
harness = false

[profile.release]
lto = true
panic = "abort"
opt-level = 3
